# aXbenchmark

./: .gitignore  README.md  a.md  pyproject.toml
axbench/: cli.py  client.py  env.py  extractor.py  loader.py  perf_tasks.py  results.py  runner.py  sandbox.py  standard_loader.py
axbench/evaluators/: __init__.py  base.py  bug_fix.py  code_gen.py  perf.py  standard.py  tool_call.py
axbench/ui/: __init__.py  dashboard.py  fallback.py  splash.py  state.py  theme.py  widgets.py
plans/: axbench-design.md  axbench-hard-benchmarks-plan.md  axbench-plan.md  axbench-task-tracker.md
tasks/general/bug_fix/cpp/: dangling_pointer.yaml  interval_merge.yaml  memory_leak.yaml
tasks/general/bug_fix/python/: broken_generator.yaml  dependency_cycle.yaml  exception_handling.yaml  lru_eviction.yaml  mutable_default.yaml  off_by_one.yaml  retry_policy.yaml
tasks/general/code_gen/bash/: archive_prune.yaml  config_diff.yaml  docker_health.yaml  log_anomaly_detector.yaml  log_rotation.yaml  mini_make.yaml
tasks/general/code_gen/cpp/: csv_parser.yaml  interval_map.yaml  lru_cache.yaml  matrix_multiply.yaml  memory_pool.yaml  string_intern.yaml  string_tokenizer.yaml  thread_pool.yaml  thread_safe_queue.yaml  (+2 more)
tasks/team/: CONTRIBUTING.md
tests/: test_bug_fix_evaluator.py  test_cli.py  test_client.py  test_code_gen_evaluator.py  test_extractor.py  test_loader.py  test_perf.py  test_registry.py  test_results.py  test_runner.py  test_sandbox.py  test_standard_evaluator.py  test_standard_loader.py  test_ui_dashboard.py  test_ui_fallback.py  test_ui_splash.py  test_ui_state.py
(+13 files in other folders)
