[project]
name = "axbench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "datasets>=2.18.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
axbench = "axbench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
